apps/production/media/transmission/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  template:
    spec:
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config-linstor
