apps/production/media/transmission/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
spec:
  serviceName: transmission
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: artifactory.local.hejsan.xyz/docker/linuxserver/transmission:4.0.6@sha256:837654b383a61c5dc7b5dec9698eee718fd5c2b97132bef3af1207e147ef296d
          ports:
            - containerPort: 9091
              name: http
          volumeMounts:
            - name: transmission-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 400Mi
              cpu: "0.3"
            requests:
              memory: 100Mi
              cpu: "0.1"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: transmission-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
