apps/production/media/transmission/peer-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-peer
spec:
  type: LoadBalancer
  loadBalancerIP: ${TRANSMISSION_PEER_IP}
