apps/production/media/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: http
      targetPort: 9091
      port: 9091
