apps/production/media/transmission/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: transmission
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
    namespace: traefik
